GwtExample: making widgets accessible outside a class; renamed GwtTestGwtExample -> GwtTestExample; more javadoc comments; new TestExample which shows usage of gwt-test-utils framework; created dedicated profiles in pom.xml and a build.bat showing build and test in three configurations.